# str_sim

./: Cargo.toml  LICENSE  README.md
src/: jaro.rs  jaro_winkler.rs  levenshtein.rs  lib.rs
