[package]
name = "str_sim"
version = "0.1.0"
authors = ["Administrator <dontbeproud@foxmail.com>"]
edition = "2018"
license = "MIT"
description = "Calculate the similarity between strings."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
